WIP commit - working on stubbing requests to API server

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "lite-server | ng build --watch",
+    "build:test": "ng build --env=test --target=production --aot --progress=false",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e -s false"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +33,12 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "body-parser": "^1.18.2",
+    "browser-sync": "^2.23.3",
     "codelyzer": "~3.2.0",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.16.2",
+    "http-proxy-middleware": "^0.17.4",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -42,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.3.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
