--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,46 @@
 # Javascript Node CircleCI 2.0 configuration file
-#
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
 machine:
+  node:
+    version: 8.9.4
+  environment:
+    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
   pre:
-    - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-    - sudo dpkg -i google-chrome.deb
-    - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
-    - rm google-chrome.deb
-jobs:
-  build:
-    docker:
-      - image: circleci/node:7.10-browsers
+    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    - sudo dpkg -i google-chrome-stable_current_amd64.deb
 
-    working_directory: ~/repo
+dependencies:
+  override:
+    - yarn
+  cache_directories:
+    - ~/.cache/yarn
 
-    steps:
-      - checkout
+test:
+  override:
+    - yarn run e2e
 
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: yarn install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run: yarn run e2e
+# jobs:
+#   build:
+#     docker:
+# 			- image: selenium/standalone-chrome:3.8.1
+#       # - image: circleci/node:7.10-browsers
+# 
+#     working_directory: ~/repo
+# 
+#     steps:
+#       - checkout
+# 
+#       - restore_cache:
+#           keys:
+#           - v1-dependencies-{{ checksum "package.json" }}
+#           # fallback to using the latest cache if no exact match is found
+#           - v1-dependencies-
+# 
+#       - run: yarn install
+# 
+#       - save_cache:
+#           paths:
+#             - node_modules
+#           key: v1-dependencies-{{ checksum "package.json" }}
+# 
+#       - run: yarn run e2e
