--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "lite-server | ng build --watch",
-    "build:test": "ng build --env=test --target=production --aot --progress=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e -s false",
-    "ci:e2e": "ng e2e --progress=false"
+    "ci:build": "ng build --env=test --target=production --aot --progress=false",
+    "ci:e2e": "ng e2e -s false --progress=false"
   },
   "private": true,
   "dependencies": {
