--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ dependencies:
       # - sudo dpkg -i google-chrome.deb
       # - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
       # - rm google-chrome.deb
+
 jobs:
   build:
     docker:
@@ -36,3 +37,40 @@ jobs:
 
       - run: yarn run ci:build
       - run: yarn run ci:e2e
+
+  deploy-job:
+    docker:
+      - image: circleci/node:8.9.4-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+
+    #- restore_cache:
+        #keys:
+        #- v1-dependencies-{{ checksum "package.json" }}
+        ## fallback to using the latest cache if no exact match is found
+        #- v1-dependencies-
+
+    - run: yarn install
+
+    #- save_cache:
+        #paths:
+          #- node_modules
+        #key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run: yarn run prod:build
+      - run:
+          name: Deploy if tests pass and branch is Master
+          command: bundle exec cap production deploy
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
