--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ dependencies:
       # - rm google-chrome.deb
 
 jobs:
-  build-job:
+  build:
     docker:
       - image: circleci/node:8.9.4-browsers
 
@@ -67,10 +67,10 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build-job
+      - build
       - deploy-job:
           requires:
-            - build-job
+            - build
           filters:
             branches:
               only: master
