--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
-machine:
-  ruby:
-    version: 2.5.0
+#machine:
+  #ruby:
+    #version: 2.5.0
 dependencies:
   pre:
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
@@ -43,7 +43,8 @@ jobs:
 
   deploy-job:
     docker:
-      - image: circleci/node:8.9.4-browsers
+      #- image: circleci/node:8.9.4-browsers
+      - image: circleci/ruby:2.4.1-node
     working_directory: ~/repo
     steps:
       - checkout
