--- a/ansible/host_vars/testing-workshop/vars.yml
+++ b/ansible/host_vars/testing-workshop/vars.yml
@@ -1,8 +1,6 @@
 ---
 
 team_name: team1
-application_directory: /var/applications/team1/webapp
-webapp_hostname: workshop.sketchdev.io
-api_hostname: workshop.sketchdev.io
-deploy_user_authorized_key: ~/.ssh/id_rsa.pub
-deploy_user_ci_authorized_key: ~/.ssh/circle_ci_workshop_rsa.pub
+application_directory: /var/applications/{{ team_name }}/webapp
+webapp_hostname: "{{ team_name }}.sketchdev.io"
+api_hostname: "{{ team_name }}-api.sketchdev.io"
