--- a/ansible/roles/nginx/templates/webapp.conf
+++ b/ansible/roles/nginx/templates/webapp.conf
@@ -2,10 +2,14 @@ log_format proxied_combined '$http_x_forwarded_for - $remote_user [$time_local] 
                             '"$request" $status $body_bytes_sent '
                             '"$http_referer" "$http_user_agent"';
 
+upstream api_server {
+	server {{ api_hostname }};
+}
+
 # limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
 server {
-  server_name www.{{ webapp_hostname }} *.{{ webapp_hostname }};
+  server_name *.{{ webapp_hostname }};
   return 301 https://{{ webapp_hostname }}$request_uri;
 }
 
@@ -32,6 +36,17 @@ server {
 
     break;
   }
+
+	location /api/ {
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-NginX-Proxy true;
+		#rewrite ^/api/?(.*) /$1 break;
+		proxy_pass http://api_server/;
+		proxy_ssl_session_reuse off;
+		proxy_set_header Host $http_host;
+		proxy_redirect off;
+	}
 
   location / {
     if ($http_x_forwarded_proto != "https") {
