--- a/ansible/roles/nginx/templates/nginx.conf
+++ b/ansible/roles/nginx/templates/nginx.conf
@@ -30,6 +30,11 @@ http {
 
 	log_format main '$remote_addr - $remote_user ($time_local) $status "$request" $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
 
+	log_format proxied_combined '$http_x_forwarded_for - $remote_user [$time_local]  '
+		'"$request" $status $body_bytes_sent '
+		'"$http_referer" "$http_user_agent"';
+
+
 	# Send the nginx version number in error pages and server headers.
 	server_tokens off;
 	access_log '/var/log/nginx/access.log' main buffer=16k;
