--- a/ansible/roles/nginx/templates/webapp.conf
+++ b/ansible/roles/nginx/templates/webapp.conf
@@ -33,16 +33,22 @@ server {
     break;
   }
 
-	location /api/ {
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-NginX-Proxy true;
-		#rewrite ^/api/?(.*) /$1 break;
-		proxy_pass http://api_server/;
-		proxy_ssl_session_reuse off;
-		proxy_set_header Host $http_host;
-		proxy_redirect off;
-	}
+  location /api {
+    # limit_req zone=api burst=10;
+
+    proxy_pass_request_headers on;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+
+    rewrite /api/(.*) /$1 break;
+
+    proxy_pass {{ local_api_hostname }}
+    # proxy_pass https://team1-api.sketchdev.io;
+    # add_header 'Origin' "$http_origin";
+    break;
+  }
 
   location / {
     if ($http_x_forwarded_proto != "https") {
