fixing ansible config for webapp

--- a/ansible/roles/nginx/templates/webapp.conf
+++ b/ansible/roles/nginx/templates/webapp.conf
@@ -44,7 +44,7 @@ server {
 
     rewrite /api/(.*) /$1 break;
 
-    proxy_pass {{ local_api_hostname }};
+    proxy_pass http://{{ local_api_hostname }};
     # proxy_pass https://team1-api.sketchdev.io;
     # add_header 'Origin' "$http_origin";
     break;
